Dostosowano metody matches klas SimpleSymbol i CompoundSymbol do pracy z indykatorami.