@@ -1,7 +1,10 @@
 package pl.polsl.blissapp.data.model;
 
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public final class CompoundSymbol extends Symbol
 {
@@ -29,46 +32,79 @@ public final class CompoundSymbol extends Symbol
     public CompoundSymbol asCompound() { return this; }
 
     @Override
-    public int getUnitCount() { return units.size(); }
-
-    @Override
     public int getRadicalCount() { return radicalCount; }
 
-    public List<SimpleSymbol> getUnits() { return units; }
-
-    public int matches(Symbol subSymbol, List<Radical> requirements)
+    @Override
+    public List<SimpleSymbol> getComponents()
     {
-        final int failure = -1;
+        return units;
+    }
 
-        List<SimpleSymbol> initials = Collections.emptyList();
-        if (subSymbol instanceof SimpleSymbol simple)
+    private static List<SimpleSymbol> subtractRequiredSymbols(List<SimpleSymbol> provided,
+                                                              List<SimpleSymbol> required)
+    {
+        if (required.size() > provided.size())
         {
-            initials = Collections.singletonList(simple);
-        }
-        else if (subSymbol instanceof CompoundSymbol compound)
-        {
-            initials = compound.getUnits();
-        }
-
-        if (initials.size() > units.size())
-        {
-            return failure;
+            return null;
         }
 
-        for (int i = 0; i < initials.size(); ++i)
+        for (int i = 0; i < required.size(); ++i)
         {
-            SimpleSymbol provided = units.get(i);
-            SimpleSymbol required = initials.get(i);
-            if (!provided.equals(required))
+            if (!provided.get(i).equals(required.get(i)))
             {
-                return failure;
+                return null;
             }
         }
+        return provided.subList(required.size(), provided.size());
+    }
 
-        List<SimpleSymbol> remainder = units.subList(initials.size(), units.size());
+    private static List<SimpleSymbol> subtractRequiredSymbolsIgnoreOrder(List<SimpleSymbol> provided,
+                                                                         List<SimpleSymbol> required)
+    {
+        if (required.size() > provided.size())
+        {
+            return null;
+        }
+
+        List<SimpleSymbol> providedCopy = new ArrayList<>(provided);
+        providedCopy.sort(Comparator.comparingInt(Symbol::getIndex));
+        for (SimpleSymbol component : required)
+        {
+            int index = Collections.binarySearch(providedCopy, component,
+                    Comparator.comparingInt(Symbol::getIndex));
+            if (index < 0)
+            {
+                return null;
+            }
+            providedCopy.remove(index);
+        }
+        return providedCopy;
+    }
+
+    public int matches(Symbol subSymbol,
+                       List<Radical> requiredRadicals,
+                       List<Indicator> requiredIndicators)
+    {
+        List<SimpleSymbol> requiredSymbols = subSymbol == null
+                ? Collections.emptyList()
+                : subSymbol.getComponents();
+
+        List<SimpleSymbol> remainder = subtractRequiredSymbols(units, requiredSymbols);
+        if (remainder == null)
+        {
+            return -1;
+        }
+
         List<Radical> radicals = remainder.stream()
                 .flatMap(s -> s.getRadicals().stream())
-                .toList();
-        return match(radicals, requirements);
+                .collect(Collectors.toList());
+        int radicalMatch = matchRadicals(radicals, requiredRadicals);
+
+        List<Indicator> indicators = remainder.stream()
+                .flatMap(s -> s.getIndicators().stream())
+                .collect(Collectors.toList());
+        int indicatorMatch = matchIndicators(indicators, requiredIndicators);
+
+        return radicalMatch < 0 || indicatorMatch < 0 ? -1 : radicalMatch + indicatorMatch;
     }
 }
